--- a/BIO_106L/Lab_8/main.tex
+++ b/BIO_106L/Lab_8/main.tex
@@ -54,11 +54,16 @@
 % Dataset Table: Treatment, Initial, Final, Change
 \begin{longtable}[c]{|c|r|r|r|r|}
   \toprule
-  \textbf{\#} &
-  \TEMPERATURE{TREATMENT} &
+  \textbf{\textcolor{white}{\#}} &
+  \TEMPERATURE{\textcolor{white}{TREATMENT}} &
   \TEMPERATURE{\textcolor{white}{TREATMENT}} &
   \TEMPERATURE{\textcolor{white}{TREATMENT}} &
   \TEMPERATURE{\textcolor{white}{TREATMENT}}\\
+  \textbf{\#} &
+  \TEMPERATURE{TREATMENT} &
+  \I{INITIAL}{0em}{1.5em} &
+  \I{FINAL}{0em}{2em} &
+  \I{CHANGE}{0em}{1em}\\
   &
   \TC\ &
   \WT{0em}{1.8em} &
@@ -67,11 +72,16 @@
   \midrule\endfirsthead%
 
   \toprule
-  \textbf{\#} &
-  \TEMPERATURE{TREATMENT} &
+  \textbf{\textcolor{white}{\#}} &
+  \TEMPERATURE{\textcolor{white}{TREATMENT}} &
   \TEMPERATURE{\textcolor{white}{TREATMENT}} &
   \TEMPERATURE{\textcolor{white}{TREATMENT}} &
   \TEMPERATURE{\textcolor{white}{TREATMENT}}\\
+  \textbf{\#} &
+  \TEMPERATURE{TREATMENT} &
+  \I{INITIAL}{0em}{1.5em} &
+  \I{FINAL}{0em}{2em} &
+  \I{CHANGE}{0em}{1em}\\
   &
   \TC\ &
   \WT{0em}{1.8em} &
