--- a/BIO_106L/Lab_9/main.tex
+++ b/BIO_106L/Lab_9/main.tex
@@ -97,11 +97,11 @@
       &=\boxed{9.04}\\
       \epsilon_{\DA{A}}&= \tfrac{\sigma_{\DA{A}}}{\sqrt{N}}\\
       &=\boxed{2.86}\\
-      \mathcal{CI}_{\DA{A}}&= 2\cdot \epsilon_{\DA{A}}\\
+      \mathcal{CI}_{\DA{A}}&= 2\times \epsilon_{\DA{A}}\\
       &=\boxed{5.72~(95\%~\mathcal{CI}_{\DA{A}})}\\
-      Upper~\mathcal{CL}_{\DA{A}}&=\overline{\DA{A}} +\left(2\cdot \epsilon_{\DA{A}}\right)\\
+      Upper~\mathcal{CL}_{\DA{A}}&=\overline{\DA{A}} +\left(\mathcal{CI}_{\DA{A}}\right)\\
       &=\boxed{2.08}\\
-      Lower~\mathcal{CL}_{\DA{A}}&=\overline{\DA{A}} -\left(2\cdot \epsilon_{\DA{A}}\right)\\
+      Lower~\mathcal{CL}_{\DA{A}}&=\overline{\DA{A}} -\left(\mathcal{CI}_{\DA{A}}\right)\\
       &=\boxed{ - 9.36}\\
     \end{align*}
   \end{center}
@@ -169,11 +169,11 @@
       &=\boxed{10.92}\\
       \epsilon_{\DB{B}}&= \tfrac{\sigma_{\DB{B}}}{\sqrt{N}}\\
       &=\boxed{3.45}\\
-      \mathcal{CI}_{\DB{B}}&= 2\cdot \epsilon_{\DB{B}}\\
+      \mathcal{CI}_{\DB{B}}&= 2\times \epsilon_{\DB{B}}\\
       &=\boxed{6.90~(95\%~\mathcal{CI}_{\DB{B}})}\\
-      Upper~\mathcal{CL}_{\DB{B}}&=\overline{\DB{B}} +\left(2\cdot \epsilon_{\DB{B}}\right)\\
+      Upper~\mathcal{CL}_{\DB{B}}&=\overline{\DB{B}} +\left(\mathcal{CI}_{\DB{B}}\right)\\
       &=\boxed{18.83}\\
-      Lower~\mathcal{CL}_{\DB{B}}&=\overline{\DB{B}} -\left(2\cdot \epsilon_{\DB{B}}\right)\\
+      Lower~\mathcal{CL}_{\DB{B}}&=\overline{\DB{B}} -\left(\mathcal{CI}_{\DB{B}}\right)\\
       &=\boxed{5.12}\\
     \end{align*}
   \end{center}
