--- a/BIO_106L/Lab_9/main.tex
+++ b/BIO_106L/Lab_9/main.tex
@@ -182,14 +182,14 @@
   \fbox{\begin{minipage}{53em}
     \begin{enumerate}
       \item What was your hypothesis?
-      \item[-] My hypothesis on C. elegans on ethanol and caffeine would have a similar effect as humans would since we\\share a common ancestor. For humans, ethanol is a downer while caffeine is a upper. I would expect drug \DA{A}\\to be on the negative side of the graph and drug \DB{B} to be on the positive side of the graph with both drugs to\\have significant differences.
+      \item[-] My hypothesis on the effect of C. elegans on each drug would be similar effect it has on humans since we\\share a common ancestor with C. elegans. So for ethanol would probably have a negative effect and\\caffeine having a positive effect with both significant differences.
       \item Does the data support your hypothesis? In other words, what were the results of the experiment? Did Drug \DA{A}\\have a significant positive or negative effect? Did Drug \DB{B} have a significant positive or negative effect?
       \item[-] Drug \DA{A}'s confidence interval overlaps with zero, therefore ethanol has no significant difference on C. elegans.
       \item[-] Drug \DB{B}'s confidence interval do not overlap with zero, therefor caffeine has a significant difference on C. elegans.
       \item If the data does not show significance, why might this be?
-      \item[-] Drug \DA{A} has no significant difference on C. elegans because
+      \item[-] Drug \DA{A} has no significant difference on C. elegans and I am actually not really sure but if I had to guess, probably their central nervous system somehow is immune to ethanol.
       \item Do you think it's an issue that Robyn knew which side of the slide was the control and which side contained\\the drug? Could this influence results?
-      \item[-] d
+      \item[-] I believe in the video, she didn't know which slide contained the drugs, but let's assume that she did then this\\can alter her lab research due to her biases she can potentially count faster or slower knowing which drug the\\slide is on.
     \end{enumerate}
   \end{minipage}}
 \end{center}
