--- a/BIO_106L/Lab_10/main.tex
+++ b/BIO_106L/Lab_10/main.tex
@@ -27,53 +27,72 @@
 \def\A#1{\textbf{#1}}
 \def\B#1#2#3{\hspace*{#2}\textbf{#1}\hspace*{#3}}
 \graphicspath{{./images/}} % image path
-\title{Analysis of C. elegans on Drugs Lab Report}
+\title{Choice experiment with fish Lab Report}
 \author{Philip Kim}
 \date{\today}
 \begin{document}
 \maketitle
 \vspace*{-1cm}
 \begin{center}
-  \begin{longtable}[c]{|c|r|r|r|}
+  \begin{longtable}[c]{|c|r|r|}
     \toprule
     \textbf{\textcolor{white}{\#}} &
-    \A{\textcolor{white}{Drug A -\ Control A}} &
-    \A{\textcolor{white}{Drug A -\ Control A}} &
-    \A{\textcolor{white}{Drug A -\ Control A}}\\
+    \A{\textcolor{white}{Sex of Focal Fish (M)}} &
+    \A{\textcolor{white}{Sex of Focal Fish (F)}}\\
     \textbf{\#} &
-    \B{Drug \DA{A}}{0em}{3em} &
-    \B{Control \DA{A}}{0em}{2em} &
-    \B{Drug \DA{A} -\ Control \DA{A}}{0em}{0em}\\
-    \textbf{\textcolor{white}{\#}} &
+    \B{Sex of Focal Fish (M)}{0em}{0em} &
+    \B{Sex of Focal Fish (F)}{0em}{0em}\\
     \textbf{\textcolor{white}{\#}} &
     \textbf{\textcolor{white}{\#}} &
     \textbf{\textcolor{white}{\#}}\\
     \midrule\endfirsthead%
     \toprule
     \textbf{\textcolor{white}{\#}} &
-    \A{\textcolor{white}{Drug A -\ Control A}} &
-    \A{\textcolor{white}{Drug A -\ Control A}} &
-    \A{\textcolor{white}{Drug A -\ Control A}}\\
+    \A{\textcolor{white}{Sex of Focal Fish (M)}} &
+    \A{\textcolor{white}{Sex of Focal Fish (F)}}\\
     \textbf{\#} &
-    \B{Drug A}{0em}{3em} &
-    \B{Control A}{0em}{2em} &
-    \B{Drug A -\ Control A}{0em}{0em}\\
-    \textbf{\textcolor{white}{\#}} &
+    \B{Sex of Focal Fish (M)}{0em}{0em} &
+    \B{Sex of Focal Fish (F)}{0em}{0em}\\
     \textbf{\textcolor{white}{\#}} &
     \textbf{\textcolor{white}{\#}} &
     \textbf{\textcolor{white}{\#}}\\
     \midrule\endhead%
-      1 & 40.20 & 22.40 & 17.80\\\midrule
-      2 & 7.60 & 9.90 & -2.30\\\midrule
-      3 & 0.00 & 6.20 & -6.20\\\midrule
-      4 & 15.10 & 18.10 & -3.00\\\midrule
-      5 & 10.50 & 20.50 & -10.00\\\midrule
-      6 & 5.50 & 2.00 & 3.50\\\midrule
-      7 & 22.50 & 25.00 & -2.50\\\midrule
-      8 & 12.60 & 23.30 & -10.70\\\midrule
-      9 & 3.00 & 15.00 & -12.00\\\midrule
-      10 & 0.00 & 11.00 & -11.00\\
+      1 & -4.23 & -2.25\\\midrule
+      2 & 3.50 & -1.50\\\midrule
+      3 & 2.82 & 1.78\\\midrule
+      4 & 3.73 & 2.97\\\midrule
+      5 & 2.98 & 3.46\\\midrule
+      6 & 0.168 & 3.82\\\midrule
+      7 & 1.24 & -1.14\\\midrule
+      8 & -0.16 & -1.12\\\midrule
+      9 & 2.14 & 0.56\\\midrule
+      10 & 0.18 & -0.92\\\midrule
+      11 & 1.06 & 3.20 \\\midrule
+      12 & -1.37 & 0.20 \\\midrule
+      13 & 0.28 & -0.38 \\\midrule
+      14 & 2.84 & 2.12 \\\midrule
+      15 & 1.18 & 2.46 \\\midrule
+      16 & -0.038 & 3.25 \\\midrule
+      17 & 2.18 & 2.18 \\
     \bottomrule
   \end{longtable}
 \end{center}
+% n
+% mean
+% std dev
+% std err
+% ci
+
+% preference:
+% mean
+% ci
+
+% graph
+
+% 1. What did you hypothesize about the outcome of this experiment (prior to looking at the data!)?
+
+% 2. Do the data provide evidence to support your hypothesis ? Explain (in other words, interpret your graph).
+
+% 3. How does this experiment relate to the concept of sexual selection? (Hint: mate choice based on coloration and morphological features)
+
 \end{document}
